--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         Please let us know how we did with your support request. 
         All feedback is appreciated to help us improve our offering!
       </p>
-      <ul id="rating" aria-label="scale from 1 to 5" aria-multiselectable="false" class="flexrow">
-        <li value="1" class="circle" data-rating aria-selected="false" role="option">1</li>
-        <li value="2" class="circle" data-rating aria-selected="false" role="option">2</li>
-        <li value="3" class="circle" data-rating aria-selected="false" role="option">3</li>
-        <li value="4" class="circle" data-rating aria-selected="false" role="option">4</li>
-        <li value="5" class="circle" data-rating aria-selected="false" role="option">5</li>
+      <ul id="rating" aria-label="scale from 1 to 5" role='radiogroup' aria-multiselectable="false" class="flexrow">
+        <li data-value="1" class="circle" data-rating aria-selected="false" role="option">1</li>
+        <li data-value="2" class="circle" data-rating aria-selected="false" role="option">2</li>
+        <li data-value="3" class="circle" data-rating aria-selected="false" role="option">3</li>
+        <li data-value="4" class="circle" data-rating aria-selected="false" role="option">4</li>
+        <li data-value="5" class="circle" data-rating aria-selected="false" role="option">5</li>
       </ul>
       <p id="warning" aria-hidden="true">*Please, select a rating</p>
       <button type="button" aria-label="submit button" class="fs-tittle" id="submit-btn">Submit</button>
